# raytracer-rust

./: .gitignore  Cargo.toml  LICENSE  LICENSE_MIT  README.md  index.html  raytracer_bg.9e876fce.wasm  src.5661f4e6.js  src.eab55217.css
.github/workflows/: build-raytracer.yml  rust.yml
app/: Cargo.toml
app/src/: main.rs  sample_1.rs  utils.rs
raytracer/: Cargo.toml
raytracer/src/: cameras.rs  colors.rs  lib.rs  lights.rs  parser.rs  primitives.rs  ray_algorithm.rs  renderer.rs  result.rs  scene.rs  textures.rs  utils.rs  vector.rs  wasm.rs
raytracer/tests/: renderer_smoke.rs  scene_parsing.rs  smoke_renderer_native.rs  smoke_renderer_wasm.rs
raytracer/tests/samples/: mod.rs  ok_basic.toml  show_room_1.rs
samples/: basic_1.toml  basic_spotlight.toml  show_room_1.toml
src/: lib.rs  main.rs  primitives.rs  renderer.rs
webapp/: .babelrc  .gitignore  index.html  index.js  package-lock.json  package.json
webapp/src/: App.jsx  Config.jsx  Renderer.jsx  TitleBar.jsx  constants.js  index.css  index.js
webapp/tools/: publish.sh
