[package]
name = "app"
version = "0.1.0"
authors = ["Vincent Hiribarren <vhiribarren@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raytracer = { path = "../raytracer" }
sdl2 = { version = "0.32.0", features = ["bundled"] }   # static-link feature does not work in this version