[package]
name = "app"
version = "0.1.0"
authors = ["Vincent Hiribarren <vhiribarren@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raytracer = { path = "../raytracer" }
sdl2 = { version = "0.33.0", features = ["bundled", "static-link"] }
log = "0.4.8"
simplelog = "0.7.4"
clap = "2.33.0"
indicatif = "0.13.0"