[package]
name = "raytracer"
version = "0.1.0"
authors = ["Vincent Hiribarren <vhiribarren@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "console_log"]

[dependencies]
wasm-bindgen = "0.2"
log = "0.4.8"
rand = "0.7.2"
rayon = "1.3.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = { version = "0.1.2", optional = true }
console_error_panic_hook = { version = "0.1.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"
